[tool.poetry]
name = "licloud"
version = "0.1.0"
description = "linux icloud client"
authors = ["gabriel centeno"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.12.0"
pyicloud = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
